--- a/RESTful-CRUD/package.json
+++ b/RESTful-CRUD/package.json
@@ -4,20 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm run api && npm run browser",
-    "api": "json-server --watch db.json",
-    "browser": "browser-sync start --server 'build' --files 'build'"
+    "start": "concurrently \"npm run gulper\" \"npm run api\"",
+    "api": "json-server --watch db.json --port 8000",
+    "gulper": "gulp"
   },
   "author": "Jeremy \"Jermbo\" Lawson",
   "license": "MIT",
   "dependencies": {
+    "babel-preset-es2015": "^6.24.0",
     "browser-sync": "^2.18.8",
+    "concurrently": "^3.4.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.1",
     "gulp-jade": "^1.1.0",
     "gulp-json-srv": "^1.0.1",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
