--- a/RESTful-CRUD/package.json
+++ b/RESTful-CRUD/package.json
@@ -1,31 +1,14 @@
 {
-  "name": "restful-crud",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "concurrently \"npm run gulper\" \"npm run api\"",
-    "api": "json-server --watch db.json --port 8000",
-    "gulper": "gulp"
-  },
-  "author": "Jeremy \"Jermbo\" Lawson",
-  "license": "MIT",
-  "dependencies": {
-    "babel-preset-es2015": "^6.24.0",
-    "browser-sync": "^2.18.8",
-    "concurrently": "^3.4.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-jade": "^1.1.0",
-    "gulp-json-srv": "^1.0.1",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-notify": "^3.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.4.1",
-    "json-server": "^0.9.6",
-    "yargs": "^7.0.2"
-  }
+    "name": "restful-crud",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "json-server --watch db.json --port 8000"
+    },
+    "author": "Jeremy \"Jermbo\" Lawson",
+    "license": "MIT",
+    "dependencies": {
+        "json-server": "^0.9.6"
+    }
 }
