--- a/RESTful-CRUD/01-the-beginning/package.json
+++ b/RESTful-CRUD/01-the-beginning/package.json
@@ -1,7 +1,7 @@
 {
     "name": "restful-crud",
     "version": "1.0.0",
-    "description": "",
+    "description": "This is the starter pack for those who want something up and running quickly.",
     "main": "index.js",
     "scripts": {
         "start": "json-server --watch db.json --port 8000"
